--- a/website/travel_activity/css/page.css
+++ b/website/travel_activity/css/page.css
@@ -1300,7 +1300,7 @@ select::-ms-expand {
     text-align: center;
     letter-spacing: 4px;
     font-size: 28px;
-    color: #f53c3c;
+    color: #3c3c3c;
     margin-top: 10px;
 }
 
