--- a/css/index.css
+++ b/css/index.css
@@ -39,9 +39,11 @@ a:hover {
     color: #2486e4;
     text-decoration: underline;
 }
+
 a:active {
     color: #1472cc;
 }
+
 img {
     border: none;
 }
@@ -608,14 +610,17 @@ select::-ms-expand {
     z-index: 101;
     cursor: pointer;
 }
+
 .list_close_btn:hover {
     background-color: #187AD8;
     background-image: url(../images/close_icon-hover.png);
 }
+
 .list_close_btn:active {
     background-color: #1472cc;
     background-image: url(../images/close_icon-hover.png);
 }
+
 .list_close_btn img {
     width: 20px;
     height: 20px;
@@ -3234,6 +3239,86 @@ select::-ms-expand {
     z-index: 102;
 }
 
+.pup_window_small {
+    width: 430px;
+    height: auto;
+    background-color: #232323;
+    color: #c5c5c5;
+    border-radius: 20px;
+    padding: 30px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 102;
+    transform: translate(-50%, -50%);
+}
+
+.pup_window_small > .pup_close_btn {
+    width: 34px;
+    height: 34px;
+    background-size: 16px auto;
+}
+
+.pup_window_small_title_container {
+    border-bottom: 1px solid #3E3E3E;
+    padding-bottom: 15px;
+}
+
+.pup_window_small_title {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 2px;
+}
+
+.pup_window_small_subtitle {
+    font-size: 16px;
+    color: #c5c5c5;
+}
+
+.pup_window_small_content {
+    padding: 15px 5px 15px 5px;
+}
+
+.pup_window_small_option {
+    font-size: 18px;
+    padding: 10px 0px;
+    position: relative;
+}
+
+.pup_window_small_option img {
+    position: absolute;
+    top: 17px;
+    right: 3px;
+    transition-duration: 0.2s;
+}
+
+.pup_window_small_option:hover img {
+    right: -2px;
+}
+
+.pup_window_small_content a {
+    color: #c5c5c5;
+}
+
+.pup_window_small_content a:hover {
+    color: #187ad8;
+    text-decoration: none;
+}
+.pup_window_small_tip{
+    font-size:14px;
+    padding-top:15px;
+    border-top:1px solid #3E3E3E;
+}
+.pup_bg_transparent {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 100;
+}
+
 .pup_close_btn {
     width: 42px;
     height: 42px;
@@ -3248,14 +3333,17 @@ select::-ms-expand {
     right: 20px;
     cursor: pointer;
 }
+
 .pup_close_btn:hover {
     background-color: #187AD8;
     background-image: url(../images/close_icon-hover.png);
 }
+
 .pup_close_btn:active {
     background-color: #1472cc;
     background-image: url(../images/close_icon-hover.png);
 }
+
 .pup_close_btn img {
     width: 20px;
     height: 20px;
@@ -3558,10 +3646,12 @@ select::-ms-expand {
     color: #2486e4;
     border: 3px solid #2486e4;
 }
+
 .pup_window_btn:active {
     color: #1472cc;
     border: 3px solid #1472cc;
 }
+
 .pup_normal_text_small {
     font-size: 16px;
     margin-bottom: 5px;
@@ -3834,6 +3924,11 @@ select::-ms-expand {
 
     .pup_content_pic_item_mobile {
         margin-bottom: 50px;
+    }
+
+    .pup_window_small {
+        width: 90%;
+        padding:20px;
     }
 }
 
