--- a/css/index.css
+++ b/css/index.css
@@ -3304,11 +3304,13 @@ select::-ms-expand {
     color: #187ad8;
     text-decoration: none;
 }
-.pup_window_small_tip{
-    font-size:14px;
-    padding-top:15px;
-    border-top:1px solid #3E3E3E;
+
+.pup_window_small_tip {
+    font-size: 14px;
+    padding-top: 15px;
+    border-top: 1px solid #3E3E3E;
 }
+
 .pup_bg_transparent {
     width: 100%;
     height: 100%;
@@ -3610,9 +3612,17 @@ select::-ms-expand {
 .yuanta_pic_1 {
     margin: 25px 10px 15px 10px;
 }
+
 .yulon_pic_1 {
     max-width: 100%;
 }
+
+.yulon_pic_4 {
+    max-width: 100%;
+    margin-bottom: 40px;
+    display: block;
+}
+
 .pup_window_content_end_tip_container {
     background-image: url(../images/pup_window_content_end_tip_line.png);
     background-repeat: repeat-x;
@@ -3677,6 +3687,18 @@ select::-ms-expand {
 
 .pup_title_text .text {
     padding-left: 57px;
+}
+
+.slide_btn {
+    font-size: 18px;
+    color: #187AD8;
+    font-weight: bold;
+    margin-bottom: 30px;
+    cursor: pointer;
+}
+
+.slide_btn:hover {
+    text-decoration: underline;
 }
 
 @media (max-width:1780px) {
@@ -3828,6 +3850,10 @@ select::-ms-expand {
         margin: 25px 0px 15px 0px;
     }
 
+    .yulon_pic_4 {
+        margin-bottom: 30px;
+    }
+
     .text_item_list {
         font-size: 16px;
     }
@@ -3843,6 +3869,10 @@ select::-ms-expand {
     .pup_normal_text_small {
         font-size: 14px;
         margin-bottom: 3px;
+    }
+
+    .slide_btn {
+        font-size: 16px;
     }
 }
 
@@ -3919,7 +3949,9 @@ select::-ms-expand {
     .sino_pic_5_item {
         text-align: center;
     }
-
+    .yulon_pic_4 {
+        margin-bottom: 20px;
+    }
     .pup_content_pic_item {
         margin-bottom: 50px;
     }
@@ -3930,7 +3962,7 @@ select::-ms-expand {
 
     .pup_window_small {
         width: 90%;
-        padding:20px;
+        padding: 20px;
     }
 }
 
@@ -4258,6 +4290,10 @@ select::-ms-expand {
     background-color: #254A91;
 }
 
+.dark_square {
+    background-color: #3c3c3c;
+}
+
 @media (max-width:430px) {
     .color_square_container {
         font-size: 14px;
@@ -4265,7 +4301,7 @@ select::-ms-expand {
     }
 
     .color_square_item {
-        margin-right: 0px;
+        margin-right: 10px;
         padding-left: 32px;
     }
 
