--- a/css/index.css
+++ b/css/index.css
@@ -517,7 +517,7 @@ select::-ms-expand {
 
 /*選單end*/
 /*選單*/
-.page_list_bg {
+.page_menu_bg {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
