--- a/css/index.css
+++ b/css/index.css
@@ -2766,8 +2766,20 @@ select::-ms-expand {
     display: inline-flex;
     align-items: center;
     cursor: pointer;
+    position: relative;
 }
-
+.pup_link_container_tip{
+    background-color:#232323;
+    width:185px;
+    font-size:14px;
+    color:#ffffff !important;
+    font-weight:normal;
+    border-radius: 99px 99px 99px 0px;
+    padding:2px 0px 2px 10px;
+    position:absolute;
+    top:-10px;
+    right:-188px;
+}
 .pup_link_container:hover span {
     text-decoration: underline;
 }
@@ -4049,7 +4061,7 @@ select::-ms-expand {
 }
 
 .pup_info_link {
-    color: #232323;
+    color: #187AD8;
     font-weight: normal;
     text-decoration: underline;
     cursor: pointer;
@@ -4919,3 +4931,51 @@ select::-ms-expand {
     animation-delay: 2s;
     animation-iteration-count: 2;
 }
+@-webkit-keyframes shake_item {
+
+    0%,
+    100% {
+        -webkit-transform: translateX(0);
+        opacity: 1;
+    }
+
+    10%,
+    30%,
+    50%,
+    70%,
+    90% {
+        -webkit-transform: translateX(-5px);
+    }
+
+    20%,
+    40%,
+    60%,
+    80% {
+        -webkit-transform: translateX(5px);
+    }
+}
+
+@-moz-keyframes shake_item {
+
+    0%,
+    100% {
+        -moz-transform: translateX(0);
+        opacity: 1;
+    }
+
+    10%,
+    30%,
+    50%,
+    70%,
+    90% {
+        -moz-transform: translateX(-5px);
+    }
+
+    20%,
+    40%,
+    60%,
+    80% {
+        -moz-transform: translateX(5px);
+    }
+}
+
